crates/convcommits-tests/src/snapshots/convcommits_tests__tests__parse_commit_msgs@empty.txt.snap
---
source: crates/convcommits-tests/src/lib.rs
expression: "&parsed_msg"
info:
  msg: ""
input_file: crates/convcommits-tests/tests/resources/commits/empty.txt
---
Err: Ty
