crates/convcommits-tests/src/snapshots/convcommits_tests__tests__parse_commit_msgs@ty-desc-body-bullet-list.txt.snap
---
source: crates/convcommits-tests/src/lib.rs
expression: "&parsed_msg"
info:
  msg: "docs: add platform support\n\nList:\n- a\n- b\n- c, d"
input_file: crates/convcommits-tests/tests/resources/commits/ty-desc-body-bullet-list.txt
---
Ok:
  ty: docs
  scope: ~
  is_breaking_change: false
  desc: add platform support
  body: "List:\n- a\n- b\n- c, d"
  footer: ""
