crates/convcommits-tests/src/snapshots/convcommits_tests__tests__parse_commit_msgs@ty-desc-body-with-ty-desc.txt.snap
---
source: crates/convcommits-tests/src/lib.rs
expression: "&parsed_msg"
info:
  msg: "docs(build): add build docs\n\nbuild: add new platforms\n"
input_file: crates/convcommits-tests/tests/resources/commits/ty-desc-body-with-ty-desc.txt
---
Ok:
  ty: docs
  scope: build
  is_breaking_change: false
  desc: add build docs
  body: ""
  footer: "build: add new platforms"
