crates/convcommits-tests/src/snapshots/convcommits_tests__tests__parse_commit_msgs@ty-desc-body.txt.snap
---
source: crates/convcommits-tests/src/lib.rs
expression: "&parsed_msg"
info:
  msg: "feat: add scope parsing\n\nParse the scope in parentheses."
input_file: crates/convcommits-tests/tests/resources/commits/ty-desc-body.txt
---
Ok:
  ty: feat
  scope: ~
  is_breaking_change: false
  desc: add scope parsing
  body: Parse the scope in parentheses.
  footer: ""
