crates/convcommits-tests/src/snapshots/convcommits_tests__tests__parse_commit_msgs@ty-desc-bullet-body.txt.snap
---
source: crates/convcommits-tests/src/lib.rs
expression: "&parsed_msg"
info:
  msg: "feat: add implementation\n\n* docs: add docs\n\n* fix: handle error"
input_file: crates/convcommits-tests/tests/resources/commits/ty-desc-bullet-body.txt
---
Ok:
  ty: feat
  scope: ~
  is_breaking_change: false
  desc: add implementation
  body: "* docs: add docs\n\n* fix: handle error"
  footer: ""
